kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/component: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
      app.kubernetes.io/part-of: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/component: application
    spec:
      containers:
        - name: hello-world
          image: jayamorin/hello-world:v1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            failureThreshold: 6
            httpGet:
              scheme: HTTP
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            failureThreshold: 6
            httpGet:
              scheme: HTTP
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
          startupProbe:
            failureThreshold: 6
            httpGet:
              scheme: HTTP
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
