kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/component: application
spec:
  selector:
      app.kubernetes.io/name: hello-world
      app.kubernetes.io/part-of: hello-world
  type: ClusterIP
  ports:
    - name: http-port
      port: 5000
